--- a/composer.json
+++ b/composer.json
@@ -7,8 +7,10 @@
     "require": {
         "php": ">=5.6.4",
         "dingo/api": "1.0.x@dev",
+        "inno/basic-api": "dev-master",
         "laravel/framework": "5.4.*",
         "laravel/tinker": "~1.0",
+        "predis/predis": "^1.1",
         "prettus/l5-repository": "^2.6"
     },
     "require-dev": {
